Bug 101196 - [UI] Lay out of Tools > Options > LibreOffice > View broken for UI Dutch: width of first column is wrong
Summary: [UI] Lay out of Tools > Options > LibreOffice > View broken for UI Dutch: wid...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
5.2.0.3 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-29 14:25 UTC by Cor Nouws
Modified: 2016-08-03 09:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screen shots from two versions - one with Dutch UI and English UI (277.29 KB, application/download)
2016-07-29 14:30 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2016-07-29 14:25:17 UTC
Will add screen shots showing
  Tools > Options > LibreOffice > View
for Dutch locale (nl-NL) in Version: 5.3.0.0.alpha0+
Build ID: e9915cbf4f29bc79360c6c6148405b4490bf90e4
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default; 
Locale: nl-NL (nl_NL.UTF-8); Calc: group

and en-US in the same version.

Controls for users interface and mouse are (partially) hidden since there is not enough width.
Comment 1 Cor Nouws 2016-07-29 14:30:14 UTC
Created attachment 126469 [details]
screen shots from two versions - one with Dutch UI  and English UI

it is not the locale that makes a difference, but the choice for the UI language!
Comment 2 Stephan van den Akker 2016-07-31 10:26:27 UTC
I can confirm similar problems in LO:

Versie: 5.2.0.3 
Build ID: 20m0(Build:3)
CPU Threads: 8; Versie besturingssysteem:Linux 3.16; UI Render: standaard; 
Locale: en-GB (en_US.UTF-8)

Running under KDE 4.14, but this version has the libreoffice-gnome extensions installed.


Versie: 5.3.0.0.alpha0+ 
Build ID: 1c54cbf5bd811423ddfc29bea321510a1533d7d9
CPU Threads: 8; Versie besturingssysteem:Linux 3.16; UI Render: standaard; 
Locale: en-US (en_US.UTF-8); Calc: CL

Running under KDE 4.14, compiled with --enable-kde4 option. Not sure what it actually uses because of compile time errors about KDE not having certain patches applied.

Some of the controls are completely hidden in the 5.2.0.3 version.
Comment 3 Cor Nouws 2016-08-02 14:58:22 UTC
(In reply to Stephan van den Akker from comment #2)
> I can confirm similar problems in LO:

Thanks Stephan,

@Caolán: something you can look at?

Ciao - Cor
Comment 4 Caolán McNamara 2016-08-02 16:03:55 UTC
THe force opengl... text is just so long that it ends up squashing everything when it comes up against the fixed width of that dialog. We could probably force a line break in there as a band-aid.

The text should be reworked to e.g "Use OpenGL for all rendering" and "Ignore OpenGL blacklist". Prompt via the restart dialog that a restart is needed to active those. And put any extra hints as to what a blacklist means into a tooltip
Comment 5 Commit Notification 2016-08-02 19:51:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1c33b3f5f693d432f74c795a87f87bd487b09d47

Resolves: tdf#101196 line wrap very long checkbox content

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-08-02 20:06:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=40c889105ff758ae09c7d9f423fbc3b85d5e2a53

Related: tdf#101196 shorten description, move info into tooltip

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-08-02 20:06:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4e8bc5462a01818f0f9c92a09f1bdc68821187f4

Related: tdf#101196 prompt to restart after OpenGL config changes

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2016-08-02 20:07:16 UTC
https://gerrit.libreoffice.org/#/c/27811/ for the standalone force the text to wrap backport to 5-2
Comment 9 Cor Nouws 2016-08-02 21:52:49 UTC
thanks Caolán!
Comment 10 Commit Notification 2016-08-03 09:51:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=89b7c4b634a4da90d110c125ad0182ea57e1a46a&h=libreoffice-5-2

Resolves: tdf#101196 line wrap very long checkbox content

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.