Related: tdf#101196 shorten description, move info into tooltip

Change-Id: Id3e083dc45135c8af724c64530b6eb4e36c7f6d2