cui/source/options/optgdlg.cxx
@@ -644,18 +644,6 @@ OfaViewTabPage::OfaViewTabPage(vcl::Window* pParent, const SfxItemSet& rSet)
         m_pOpenGLStatusEnabled->Hide();
         m_pOpenGLStatusDisabled->Hide();
     }
-    else
-    {
-        //tdf#191196, we need height-for-width support here, but for now we can
-        //bodge it
-        Size aPrefSize(m_pForceOpenGL->get_preferred_size());
-        Size aSize(m_pForceOpenGL->CalcMinimumSize(36*approximate_char_width()));
-        if (aPrefSize.Width() > aSize.Width())
-        {
-            m_pForceOpenGL->set_width_request(aSize.Width());
-            m_pForceOpenGL->set_height_request(aSize.Height());
-        }
-    }
 
 #if defined( UNX )
     m_pFontAntiAliasing->SetToggleHdl( LINK( this, OfaViewTabPage, OnAntialiasingToggled ) );
